// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: rgba(235,235,235,0.5);
  border: 1px solid rgba(235,235,235,0);
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: rgba(235,235,235,0.5);
  border: 1px solid rgba(235,235,235,0);
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: rgba(235,235,235,0.5);
  border: 1px solid rgba(235,235,235,0);
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" con estilo para "float" y "width". 1`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  style={
    Object {
      "float": "left",
      "width": "100%",
    }
  }
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][IconButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "small" y con el icono "plus". 1`] = `
.c2 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px 5px 0px 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c3:hover .c1 {
  fill: #FFF;
}

.c3:disabled .c1 {
  fill: #FFF;
}

.c3 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c4:hover .c1 {
  fill: #FFF;
}

.c4:disabled .c1 {
  fill: #FFF;
}

.c4 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c5:hover .c1 {
  fill: #FFF;
}

.c5:disabled .c1 {
  fill: #FFF;
}

.c5 .c1 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c6:hover .c1 {
  fill: #FFF;
}

.c6:disabled .c1 {
  fill: #FFF;
}

.c6 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c7:hover .c1 {
  fill: #FFF;
}

.c7:disabled .c1 {
  fill: #FFF;
}

.c7 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c8:hover .c1 {
  fill: #FF456A;
}

.c8:disabled .c1 {
  fill: #BFBFBF;
}

.c8 .c1 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c9:hover .c1 {
  fill: #FF456A;
}

.c9:disabled .c1 {
  fill: #BFBFBF;
}

.c9 .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c10:hover .c1 {
  fill: #FF456A;
}

.c10:disabled .c1 {
  fill: #BFBFBF;
}

.c10 .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c11:hover .c1 {
  fill: #FFF;
}

.c11:disabled .c1 {
  fill: #FFF;
}

.c11 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c12:hover .c1 {
  fill: #FFF;
}

.c12:disabled .c1 {
  fill: #FFF;
}

.c12 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c13:hover .c1 {
  fill: #FFF;
}

.c13:disabled .c1 {
  fill: #FFF;
}

.c13 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c14:hover .c1 {
  fill: #1476FB;
}

.c14:disabled .c1 {
  fill: #BFBFBF;
}

.c14 .c1 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.c15:hover .c1 {
  fill: #1476FB;
}

.c15:disabled .c1 {
  fill: #BFBFBF;
}

.c15 .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c16:hover .c1 {
  fill: #1476FB;
}

.c16:disabled .c1 {
  fill: #BFBFBF;
}

.c16 .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c17:hover .c1 {
  fill: #FFF;
}

.c17:disabled .c1 {
  fill: #FFF;
}

.c17 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c18:hover .c1 {
  fill: #FFF;
}

.c18:disabled .c1 {
  fill: #FFF;
}

.c18 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c19:hover .c1 {
  fill: #FFF;
}

.c19:disabled .c1 {
  fill: #FFF;
}

.c19 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c20:hover .c1 {
  fill: #4CB050;
}

.c20:disabled .c1 {
  fill: #BFBFBF;
}

.c20 .c1 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.c21:hover .c1 {
  fill: #4CB050;
}

.c21:disabled .c1 {
  fill: #BFBFBF;
}

.c21 .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c22:hover .c1 {
  fill: #4CB050;
}

.c22:disabled .c1 {
  fill: #BFBFBF;
}

.c22 .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c23:hover .c1 {
  fill: #FFF;
}

.c23:disabled .c1 {
  fill: #FFF;
}

.c23 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c24:hover .c1 {
  fill: #FFF;
}

.c24:disabled .c1 {
  fill: #FFF;
}

.c24 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c25:hover .c1 {
  fill: #FFF;
}

.c25:disabled .c1 {
  fill: #FFF;
}

.c25 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c26:hover .c1 {
  fill: #FFE200;
}

.c26:disabled .c1 {
  fill: #BFBFBF;
}

.c26 .c1 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.c27:hover .c1 {
  fill: #FFE200;
}

.c27:disabled .c1 {
  fill: #BFBFBF;
}

.c27 .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c28:hover .c1 {
  fill: #FFE200;
}

.c28:disabled .c1 {
  fill: #BFBFBF;
}

.c28 .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c29:hover .c1 {
  fill: #FFF;
}

.c29:disabled .c1 {
  fill: #FFF;
}

.c29 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c30:hover .c1 {
  fill: #FFF;
}

.c30:disabled .c1 {
  fill: #FFF;
}

.c30 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c31:hover .c1 {
  fill: #FFF;
}

.c31:disabled .c1 {
  fill: #FFF;
}

.c31 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c32:hover .c1 {
  fill: #858585;
}

.c32:disabled .c1 {
  fill: #BFBFBF;
}

.c32 .c1 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.c33:hover .c1 {
  fill: #858585;
}

.c33:disabled .c1 {
  fill: #BFBFBF;
}

.c33 .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c34:hover .c1 {
  fill: #858585;
}

.c34:disabled .c1 {
  fill: #BFBFBF;
}

.c34 .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c35:hover .c1 {
  fill: #FFF;
}

.c35:disabled .c1 {
  fill: #BFBFBF;
}

.c35 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c36:hover .c1 {
  fill: #FFF;
}

.c36:disabled .c1 {
  fill: #BFBFBF;
}

.c36 .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c37:hover .c1 {
  fill: #FFF;
}

.c37:disabled .c1 {
  fill: #BFBFBF;
}

.c37 .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  icon="plus"
  size="small"
  theme="red"
>
  <svg
    className="c1 c2"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;

exports[`[SNAPSHOT][Componentes][Common][RoundButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "big" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c4:hover .c2 {
  fill: #FFF;
}

.c4:disabled .c2 {
  fill: #FFF;
}

.c4 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c5:hover .c2 {
  fill: #FFF;
}

.c5:disabled .c2 {
  fill: #FFF;
}

.c5 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover .c2 {
  fill: #FFF;
}

.c1:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c1:disabled .c2 {
  fill: #FFF;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c6:hover .c2 {
  fill: #FFF;
}

.c6:disabled .c2 {
  fill: #FFF;
}

.c6 .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c7:hover .c2 {
  fill: #FFF;
}

.c7:disabled .c2 {
  fill: #FFF;
}

.c7 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c8:hover .c2 {
  fill: #FFF;
}

.c8:disabled .c2 {
  fill: #FFF;
}

.c8 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c9:hover .c2 {
  fill: #FF456A;
}

.c9:disabled .c2 {
  fill: #BFBFBF;
}

.c9 .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c10:hover .c2 {
  fill: #FF456A;
}

.c10:disabled .c2 {
  fill: #BFBFBF;
}

.c10 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c11:hover .c2 {
  fill: #FF456A;
}

.c11:disabled .c2 {
  fill: #BFBFBF;
}

.c11 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c12:hover .c2 {
  fill: #FFF;
}

.c12:disabled .c2 {
  fill: #FFF;
}

.c12 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c13:hover .c2 {
  fill: #FFF;
}

.c13:disabled .c2 {
  fill: #FFF;
}

.c13 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c14:hover .c2 {
  fill: #FFF;
}

.c14:disabled .c2 {
  fill: #FFF;
}

.c14 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c15:hover .c2 {
  fill: #1476FB;
}

.c15:disabled .c2 {
  fill: #BFBFBF;
}

.c15 .c2 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.c16:hover .c2 {
  fill: #1476FB;
}

.c16:disabled .c2 {
  fill: #BFBFBF;
}

.c16 .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c17:hover .c2 {
  fill: #1476FB;
}

.c17:disabled .c2 {
  fill: #BFBFBF;
}

.c17 .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c18:hover .c2 {
  fill: #FFF;
}

.c18:disabled .c2 {
  fill: #FFF;
}

.c18 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c19:hover .c2 {
  fill: #FFF;
}

.c19:disabled .c2 {
  fill: #FFF;
}

.c19 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c20:hover .c2 {
  fill: #FFF;
}

.c20:disabled .c2 {
  fill: #FFF;
}

.c20 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c21:hover .c2 {
  fill: #4CB050;
}

.c21:disabled .c2 {
  fill: #BFBFBF;
}

.c21 .c2 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.c22:hover .c2 {
  fill: #4CB050;
}

.c22:disabled .c2 {
  fill: #BFBFBF;
}

.c22 .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c23:hover .c2 {
  fill: #4CB050;
}

.c23:disabled .c2 {
  fill: #BFBFBF;
}

.c23 .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c24:hover .c2 {
  fill: #FFF;
}

.c24:disabled .c2 {
  fill: #FFF;
}

.c24 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c25:hover .c2 {
  fill: #FFF;
}

.c25:disabled .c2 {
  fill: #FFF;
}

.c25 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c26:hover .c2 {
  fill: #FFF;
}

.c26:disabled .c2 {
  fill: #FFF;
}

.c26 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c27:hover .c2 {
  fill: #FFE200;
}

.c27:disabled .c2 {
  fill: #BFBFBF;
}

.c27 .c2 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.c28:hover .c2 {
  fill: #FFE200;
}

.c28:disabled .c2 {
  fill: #BFBFBF;
}

.c28 .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c29:hover .c2 {
  fill: #FFE200;
}

.c29:disabled .c2 {
  fill: #BFBFBF;
}

.c29 .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c30:hover .c2 {
  fill: #FFF;
}

.c30:disabled .c2 {
  fill: #FFF;
}

.c30 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c31:hover .c2 {
  fill: #FFF;
}

.c31:disabled .c2 {
  fill: #FFF;
}

.c31 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c32:hover .c2 {
  fill: #FFF;
}

.c32:disabled .c2 {
  fill: #FFF;
}

.c32 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c33:hover .c2 {
  fill: #858585;
}

.c33:disabled .c2 {
  fill: #BFBFBF;
}

.c33 .c2 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.c34:hover .c2 {
  fill: #858585;
}

.c34:disabled .c2 {
  fill: #BFBFBF;
}

.c34 .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c35:hover .c2 {
  fill: #858585;
}

.c35:disabled .c2 {
  fill: #BFBFBF;
}

.c35 .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c36:hover .c2 {
  fill: #FFF;
}

.c36:disabled .c2 {
  fill: #BFBFBF;
}

.c36 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c37:hover .c2 {
  fill: #FFF;
}

.c37:disabled .c2 {
  fill: #BFBFBF;
}

.c37 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c38:hover .c2 {
  fill: #FFF;
}

.c38:disabled .c2 {
  fill: #BFBFBF;
}

.c38 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c0 {
  border-radius: 50%;
  padding: 9px 0px;
  width: 50px;
}

<button
  className="c0 c1"
  icon="plus"
  size="big"
  theme="red"
>
  <svg
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;

exports[`[SNAPSHOT][Componentes][Common][RoundButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "medium" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c4:hover .c2 {
  fill: #FFF;
}

.c4:disabled .c2 {
  fill: #FFF;
}

.c4 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover .c2 {
  fill: #FFF;
}

.c1:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c1:disabled .c2 {
  fill: #FFF;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c5:hover .c2 {
  fill: #FFF;
}

.c5:disabled .c2 {
  fill: #FFF;
}

.c5 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c6:hover .c2 {
  fill: #FFF;
}

.c6:disabled .c2 {
  fill: #FFF;
}

.c6 .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c7:hover .c2 {
  fill: #FFF;
}

.c7:disabled .c2 {
  fill: #FFF;
}

.c7 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c8:hover .c2 {
  fill: #FFF;
}

.c8:disabled .c2 {
  fill: #FFF;
}

.c8 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c9:hover .c2 {
  fill: #FF456A;
}

.c9:disabled .c2 {
  fill: #BFBFBF;
}

.c9 .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c10:hover .c2 {
  fill: #FF456A;
}

.c10:disabled .c2 {
  fill: #BFBFBF;
}

.c10 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c11:hover .c2 {
  fill: #FF456A;
}

.c11:disabled .c2 {
  fill: #BFBFBF;
}

.c11 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c12:hover .c2 {
  fill: #FFF;
}

.c12:disabled .c2 {
  fill: #FFF;
}

.c12 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c13:hover .c2 {
  fill: #FFF;
}

.c13:disabled .c2 {
  fill: #FFF;
}

.c13 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c14:hover .c2 {
  fill: #FFF;
}

.c14:disabled .c2 {
  fill: #FFF;
}

.c14 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c15:hover .c2 {
  fill: #1476FB;
}

.c15:disabled .c2 {
  fill: #BFBFBF;
}

.c15 .c2 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.c16:hover .c2 {
  fill: #1476FB;
}

.c16:disabled .c2 {
  fill: #BFBFBF;
}

.c16 .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c17:hover .c2 {
  fill: #1476FB;
}

.c17:disabled .c2 {
  fill: #BFBFBF;
}

.c17 .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c18:hover .c2 {
  fill: #FFF;
}

.c18:disabled .c2 {
  fill: #FFF;
}

.c18 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c19:hover .c2 {
  fill: #FFF;
}

.c19:disabled .c2 {
  fill: #FFF;
}

.c19 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c20:hover .c2 {
  fill: #FFF;
}

.c20:disabled .c2 {
  fill: #FFF;
}

.c20 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c21:hover .c2 {
  fill: #4CB050;
}

.c21:disabled .c2 {
  fill: #BFBFBF;
}

.c21 .c2 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.c22:hover .c2 {
  fill: #4CB050;
}

.c22:disabled .c2 {
  fill: #BFBFBF;
}

.c22 .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c23:hover .c2 {
  fill: #4CB050;
}

.c23:disabled .c2 {
  fill: #BFBFBF;
}

.c23 .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c24:hover .c2 {
  fill: #FFF;
}

.c24:disabled .c2 {
  fill: #FFF;
}

.c24 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c25:hover .c2 {
  fill: #FFF;
}

.c25:disabled .c2 {
  fill: #FFF;
}

.c25 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c26:hover .c2 {
  fill: #FFF;
}

.c26:disabled .c2 {
  fill: #FFF;
}

.c26 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c27:hover .c2 {
  fill: #FFE200;
}

.c27:disabled .c2 {
  fill: #BFBFBF;
}

.c27 .c2 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.c28:hover .c2 {
  fill: #FFE200;
}

.c28:disabled .c2 {
  fill: #BFBFBF;
}

.c28 .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c29:hover .c2 {
  fill: #FFE200;
}

.c29:disabled .c2 {
  fill: #BFBFBF;
}

.c29 .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c30:hover .c2 {
  fill: #FFF;
}

.c30:disabled .c2 {
  fill: #FFF;
}

.c30 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c31:hover .c2 {
  fill: #FFF;
}

.c31:disabled .c2 {
  fill: #FFF;
}

.c31 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c32:hover .c2 {
  fill: #FFF;
}

.c32:disabled .c2 {
  fill: #FFF;
}

.c32 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c33:hover .c2 {
  fill: #858585;
}

.c33:disabled .c2 {
  fill: #BFBFBF;
}

.c33 .c2 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.c34:hover .c2 {
  fill: #858585;
}

.c34:disabled .c2 {
  fill: #BFBFBF;
}

.c34 .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c35:hover .c2 {
  fill: #858585;
}

.c35:disabled .c2 {
  fill: #BFBFBF;
}

.c35 .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c36:hover .c2 {
  fill: #FFF;
}

.c36:disabled .c2 {
  fill: #BFBFBF;
}

.c36 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c37:hover .c2 {
  fill: #FFF;
}

.c37:disabled .c2 {
  fill: #BFBFBF;
}

.c37 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c38:hover .c2 {
  fill: #FFF;
}

.c38:disabled .c2 {
  fill: #BFBFBF;
}

.c38 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c0 {
  border-radius: 50%;
  padding: 9px 0px;
  width: 40px;
}

<button
  className="c0 c1"
  icon="plus"
  size="medium"
  theme="red"
>
  <svg
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;

exports[`[SNAPSHOT][Componentes][Common][RoundButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "small" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover .c2 {
  fill: #FFF;
}

.c1:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c1:disabled .c2 {
  fill: #FFF;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c4:hover .c2 {
  fill: #FFF;
}

.c4:disabled .c2 {
  fill: #FFF;
}

.c4 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c5:hover .c2 {
  fill: #FFF;
}

.c5:disabled .c2 {
  fill: #FFF;
}

.c5 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c6:hover .c2 {
  fill: #FFF;
}

.c6:disabled .c2 {
  fill: #FFF;
}

.c6 .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c7:hover .c2 {
  fill: #FFF;
}

.c7:disabled .c2 {
  fill: #FFF;
}

.c7 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c8:hover .c2 {
  fill: #FFF;
}

.c8:disabled .c2 {
  fill: #FFF;
}

.c8 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c9:hover .c2 {
  fill: #FF456A;
}

.c9:disabled .c2 {
  fill: #BFBFBF;
}

.c9 .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.c10:hover .c2 {
  fill: #FF456A;
}

.c10:disabled .c2 {
  fill: #BFBFBF;
}

.c10 .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.c11:hover .c2 {
  fill: #FF456A;
}

.c11:disabled .c2 {
  fill: #BFBFBF;
}

.c11 .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.c12:hover .c2 {
  fill: #FFF;
}

.c12:disabled .c2 {
  fill: #FFF;
}

.c12 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c13:hover .c2 {
  fill: #FFF;
}

.c13:disabled .c2 {
  fill: #FFF;
}

.c13 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c14:hover .c2 {
  fill: #FFF;
}

.c14:disabled .c2 {
  fill: #FFF;
}

.c14 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c15:hover .c2 {
  fill: #1476FB;
}

.c15:disabled .c2 {
  fill: #BFBFBF;
}

.c15 .c2 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.c16:hover .c2 {
  fill: #1476FB;
}

.c16:disabled .c2 {
  fill: #BFBFBF;
}

.c16 .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.c17:hover .c2 {
  fill: #1476FB;
}

.c17:disabled .c2 {
  fill: #BFBFBF;
}

.c17 .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.c18:hover .c2 {
  fill: #FFF;
}

.c18:disabled .c2 {
  fill: #FFF;
}

.c18 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c19:hover .c2 {
  fill: #FFF;
}

.c19:disabled .c2 {
  fill: #FFF;
}

.c19 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c20:hover .c2 {
  fill: #FFF;
}

.c20:disabled .c2 {
  fill: #FFF;
}

.c20 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c21:hover .c2 {
  fill: #4CB050;
}

.c21:disabled .c2 {
  fill: #BFBFBF;
}

.c21 .c2 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.c22:hover .c2 {
  fill: #4CB050;
}

.c22:disabled .c2 {
  fill: #BFBFBF;
}

.c22 .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.c23:hover .c2 {
  fill: #4CB050;
}

.c23:disabled .c2 {
  fill: #BFBFBF;
}

.c23 .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.c24:hover .c2 {
  fill: #FFF;
}

.c24:disabled .c2 {
  fill: #FFF;
}

.c24 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c25:hover .c2 {
  fill: #FFF;
}

.c25:disabled .c2 {
  fill: #FFF;
}

.c25 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c26:hover .c2 {
  fill: #FFF;
}

.c26:disabled .c2 {
  fill: #FFF;
}

.c26 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c27:hover .c2 {
  fill: #FFE200;
}

.c27:disabled .c2 {
  fill: #BFBFBF;
}

.c27 .c2 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.c28:hover .c2 {
  fill: #FFE200;
}

.c28:disabled .c2 {
  fill: #BFBFBF;
}

.c28 .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.c29:hover .c2 {
  fill: #FFE200;
}

.c29:disabled .c2 {
  fill: #BFBFBF;
}

.c29 .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.c30:hover .c2 {
  fill: #FFF;
}

.c30:disabled .c2 {
  fill: #FFF;
}

.c30 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c31:hover .c2 {
  fill: #FFF;
}

.c31:disabled .c2 {
  fill: #FFF;
}

.c31 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c32:hover .c2 {
  fill: #FFF;
}

.c32:disabled .c2 {
  fill: #FFF;
}

.c32 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c33:hover .c2 {
  fill: #858585;
}

.c33:disabled .c2 {
  fill: #BFBFBF;
}

.c33 .c2 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.c34:hover .c2 {
  fill: #858585;
}

.c34:disabled .c2 {
  fill: #BFBFBF;
}

.c34 .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.c35:hover .c2 {
  fill: #858585;
}

.c35:disabled .c2 {
  fill: #BFBFBF;
}

.c35 .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.c36:hover .c2 {
  fill: #FFF;
}

.c36:disabled .c2 {
  fill: #BFBFBF;
}

.c36 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c37:hover .c2 {
  fill: #FFF;
}

.c37:disabled .c2 {
  fill: #BFBFBF;
}

.c37 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c38:hover .c2 {
  fill: #FFF;
}

.c38:disabled .c2 {
  fill: #BFBFBF;
}

.c38 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c0 {
  border-radius: 50%;
  padding: 1px 0px 0px 0px;
  width: 30px;
}

<button
  className="c0 c1"
  icon="plus"
  size="small"
  theme="red"
>
  <svg
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;
